# epub_to_pdf

./: .gitignore  CLAUDE.md  EPUB to PDF Converter.lnk  README.md  idea.txt  launch_epub_to_pdf.bat  launch_epub_to_pdf.vbs  pyproject.toml
src/epub_to_pdf/: __init__.py  __main__.py  app.py  converter.py
